Fixed spacing between tweets container and bottom of feed container

--- a/public/styles/partials/_layout.scss
+++ b/public/styles/partials/_layout.scss
@@ -27,7 +27,7 @@ body {
   background: {
     color: $dark;
   }
-  padding: 3rem 2rem;
+  padding: 3rem 2rem 2rem;
   border-radius: 0 0 6px 6px;
 
   .error {
